2010-07-23  Jaroslav Hajek  <highegg@gmail.com>

	* ov-re-diag.cc (octave_diag_matrix::try_narrowing_conversion): Remove
	redundant cast.
	* ov-flt-re-diag.cc 
	(octave_float_diag_matrix::try_narrowing_conversion): Ditto.
	* ov-cx-diag.cc 
	(octave_complex_diag_matrix::try_narrowing_conversion): Ditto.
	* ov-flt-cx-diag.cc 
	(octave_float_complex_diag_matrix::try_narrowing_conversion): Ditto.

2010-07-23  Jaroslav Hajek  <highegg@gmail.com>

	* pt-mat.cc (do_single_type_concat_no_mutate): Remove.
	(tree_matrix::rvalue1): Use do_single_type_concat instead.

2010-07-21  Jaroslav Hajek  <highegg@gmail.com>

	* bitfcns.cc (Fsizemax): New DEFUN.

2010-07-20  Shai Ayal  <shaiay@users.sourceforge.net>

	* DLD-FUNCTIONS/fltk_backend.cc (plot_window::plot_window):
	Added a bottom Fl_Box (copied from gmsh) and tooltips

2010-07-20  Rik <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/typecast.cc (typecast): Combine two @seealso macro
	uses to one.

2010-07-20  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/dlmread.cc (Fdlmread): Use octave_idx_type instead of
	unsigned long. Over-allocate by a factor 2 to reduce copying.
	Attempt to estimate number of columns from first line.
	Hoist tmp_stream out of the loop and reset it for each substring.

2010-07-17  Rik <octave@nomad.inbox5.com>

	* data.cc (repelems): Add more documentation about new function.

2010-07-19  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (do_repelems): New helper func.
	(Frepelems): New DEFUN.

2010-07-19  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/fltk_backend.cc (plot_window::gui_mode):
	Use enum instead of int.  Change all uses.

2010-07-18  Kai Habel <kai.habel@gmx.de>

	* DLD-FUNCTIONS/fltk_backend.cc: Add mode for mouse rotation.
	(view2status): new function
	* src/graphics.cc: Remove limitations for zooming and translation.
	(axes::properties::rotate_view): new function

2010-07-17  Rik <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/balance.cc, DLD-FUNCTIONS/ccolamd.cc,